--- a/zm.conf.in
+++ b/zm.conf.in
@@ -46,5 +46,7 @@ ZM_DB_USER=@ZM_DB_USER@
 # ZoneMinder database password
 ZM_DB_PASS=@ZM_DB_PASS@
 
-# Host of this machine
-ZM_SERVER_HOST=
+# name of this machine. It must correspond to the name of an entry in the Servers table.
+# Settings this will cause this instance to only load monitors that are assigned to this server.
+# ZM_SERVER_HOST is an alias of ZM_SERVER_NAME
+ZM_SERVER_NAME=
